feat: document authentication workflow with swagger
